= 2.0 / ?? (future release changes, like a reminder to self)
  
  - prsnt? and absnt? are now finally banned into oblivion. Wasting vocals for
    the win. 
    
= 1.3.1 / ???

  + Made it possible to pass a custom Parslet::Source implementor to #parse.
    (see #63)

  + #parse takes a second argument: prefix_parse can be set to true if no 
    error should be raised on an incomplete parse. Result is returned as if 
    the parse had gone through completely, but the input will not be consumed. 
    
  - VM engine on the way out. No benefit except for the intellectual
    challenge.
    
= 1.3.0 / 5Mar2012

  ! Parslet::Transform::Context is now much more well-behaved. It has
    #respond_to? and #method_missing; it now looks like a plain old Ruby
    object with instance variables and attribute readers.

  - Grammar transforms turned out to be a dead end and have been removed. 

  ! A few problems in error message generation have been fixed. This will
  	improve diagnostics further.
	
  + A VM driven parser engine: Removes the limitation that parsing needs a 
    lot of stack space, something dearly missing from Ruby 1.9.3 fibers.
    This engine is experimental and might be removed in the future. 

  ! Interaction with mathn fixed - Line number generation will terminate. 
	
  . Internal reorganisation, removing cruft and bit rot.
    
= 1.2.3 / 22Sep2011

  + Transform#apply can now be called with a hash as second argument. This 
    provides bindings and a way to inject context.

  ! Fixes a bug thar modified parslet atoms in place, defeating oop chaining. 
    (#50)
    
= 1.2.1 / 6Jun2011

  ! FIX: Input at the end of a parse raises Parslet::UnconsumedInput. (see
    issue 18)

  ! FIX: Unicode parsing should now work as expected. (see issue 38)
  
  ! FIX: Slice#slice returned wrong bits at times (see issue 36).

= 1.2.0 / 4Feb2011
  
  + Parslet::Parser is now also a grammar atom, it can be composed freely with